--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kapt {
+        correctErrorTypes = true
+    }
     buildFeatures{
         viewBinding true
     }
 }
 
 dependencies {
+
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
