--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -39,6 +40,19 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.16'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2'
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
