--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,19 +42,7 @@ android {
 dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-
-    kapt 'com.google.dagger:hilt-compiler:2.38.1'
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
-
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.16'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
-
-    implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -74,6 +62,14 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
 
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
