--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,13 @@
 
 buildscript {
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
-    }
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-        maven { url "https://maven.google.com" }
-        maven { url "https://maven.fullstory.com" }
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
     }
 }
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-}
-allprojects {
-
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
